# cpp_basic_tools

./: CMakeLists.txt  README.md  any.h  instance_resources.cc  instance_resources.h  instances_resource_manager.cc  instances_resource_manager.h
log/: code_location.cc  code_location.h  design.md  logger.cc  logger.h  logger_interface.h
test/: CMakeLists.txt  basic_any_unit_test.cc  basic_instance_resources_unit_test.cc  basic_instances_resource_manager_unit_test.cc  basic_log_unit_test.cc
